--- a/LabExercises/Homework3/cogsci_lab3.ipynb
+++ b/LabExercises/Homework3/cogsci_lab3.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "bc27f9f5",
    "metadata": {},
    "outputs": [],
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "ed36fe06",
    "metadata": {},
    "outputs": [
@@ -248,7 +248,7 @@
        "4.0                            0.0                 1.0  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -270,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 4,
    "id": "50b4b85d",
    "metadata": {},
    "outputs": [
@@ -409,7 +409,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 8,
    "id": "ef56f09c",
    "metadata": {},
    "outputs": [
@@ -424,6 +424,9 @@
    ],
    "source": [
     "from scipy.stats import f_oneway\n",
+    "\n",
+    "male = df.query('Gender == \"male\"')\n",
+    "female = df.query('Gender == \"female\"')\n",
     "\n",
     "stat, p = f_oneway(male['MathScore'],female['MathScore'])\n",
     "print('stat=%.3f, p=%.3f' % (stat, p))\n",
@@ -445,7 +448,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "id": "e48b849b",
    "metadata": {},
    "outputs": [
@@ -480,7 +483,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": null,
    "id": "7a30aad6",
    "metadata": {},
    "outputs": [
