classes of label encoder

--- a/LabExercises/Homework1/lab1.ipynb
+++ b/LabExercises/Homework1/lab1.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 819,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 820,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 821,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 822,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -122,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 823,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -162,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 824,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -323,7 +323,7 @@
        "max      100.000000  "
       ]
      },
-     "execution_count": 824,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -346,7 +346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 825,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -371,7 +371,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 825,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -389,7 +389,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 826,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -414,7 +414,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 826,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -446,7 +446,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 827,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -471,7 +471,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 827,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -515,7 +515,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 828,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -639,7 +639,7 @@
        "yes           2856  4730  4756  3499  1690   780   192   178     1     1     0"
       ]
      },
-     "execution_count": 828,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -681,7 +681,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 829,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -757,13 +757,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 830,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      " EthnicsGroup classes: ['group A' 'group B' 'group C' 'group D' 'group E']\n",
+      " ParentEduc classes: [\"associate's degree\" \"bachelor's degree\" 'high school' \"master's degree\"\n",
+      " 'no formal education' 'some college' 'some high school']\n",
+      " TestPrep classes: ['completed' 'none']\n",
+      " ParentMaritalStatus classes: ['divorced' 'married' 'single' 'widowed']\n",
+      " PracticeSport classes: ['never' 'regularly' 'sometimes']\n",
+      " IsFirstChild classes: ['no' 'yes']\n",
+      " TransportMeans classes: ['private' 'school_bus' 'walking']\n",
+      " WklyStudyHours classes: ['5 - 10' '< 5' '> 10']\n",
       "Unnamed: 0                0\n",
       "StudentId                 0\n",
       "Gender                    0\n",
@@ -850,20 +859,29 @@
     "# EthnicGroup\n",
     "le.fit(data['EthnicGroup'])\n",
     "data.loc[:,'EthnicGroup'] = le.transform(data.loc[:,'EthnicGroup'])\n",
+    "print(f' EthnicsGroup classes: {le.classes_}')\n",
     "le.fit(data['ParentEduc'])\n",
     "data.loc[:,'ParentEduc'] = le.transform(data.loc[:,'ParentEduc'])\n",
+    "print(f' ParentEduc classes: {le.classes_}')\n",
     "le.fit(data['TestPrep'])\n",
     "data.loc[:,'TestPrep'] = le.transform(data.loc[:,'TestPrep'])\n",
+    "print(f' TestPrep classes: {le.classes_}')\n",
     "le.fit(data['ParentMaritalStatus'])\n",
     "data.loc[:,'ParentMaritalStatus'] = le.transform(data.loc[:,'ParentMaritalStatus'])\n",
+    "print(f' ParentMaritalStatus classes: {le.classes_}')\n",
     "le.fit(data['PracticeSport'])\n",
     "data.loc[:,'PracticeSport'] = le.transform(data.loc[:,'PracticeSport'])\n",
+    "print(f' PracticeSport classes: {le.classes_}')\n",
     "le.fit(data['IsFirstChild'])\n",
     "data.loc[:,'IsFirstChild'] = le.transform(data.loc[:,'IsFirstChild'])\n",
+    "print(f' IsFirstChild classes: {le.classes_}')\n",
     "le.fit(data['TransportMeans'])\n",
     "data.loc[:,'TransportMeans'] = le.transform(data.loc[:,'TransportMeans'])\n",
+    "print(f' TransportMeans classes: {le.classes_}')\n",
     "le.fit(data['WklyStudyHours'])\n",
     "data.loc[:,'WklyStudyHours'] = le.transform(data.loc[:,'WklyStudyHours'])\n",
+    "print(f' WklyStudyHours classes: {le.classes_}')\n",
+    "\n",
     "# printar el numero de valores na de cada columna de un dataframe\n",
     "print(data.isna().sum())\n",
     "print(data.info())\n",
