--- a/Project/CODE/firstPart.ipynb
+++ b/Project/CODE/firstPart.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [
     {
@@ -238,7 +238,7 @@
        "[5 rows x 21 columns]"
       ]
      },
-     "execution_count": 83,
+     "execution_count": 100,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -260,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [
     {
@@ -308,7 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [
     {
@@ -593,7 +593,7 @@
        "max         1.000000       3.000000  204060.000000  "
       ]
      },
-     "execution_count": 85,
+     "execution_count": 102,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -625,7 +625,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [
     {
@@ -655,7 +655,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 86,
+     "execution_count": 103,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -674,7 +674,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [
     {
@@ -704,7 +704,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 87,
+     "execution_count": 104,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -716,7 +716,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 105,
    "metadata": {},
    "outputs": [
     {
@@ -745,7 +745,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 88,
+     "execution_count": 105,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -765,7 +765,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -785,7 +785,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 107,
    "metadata": {},
    "outputs": [
     {
@@ -990,7 +990,7 @@
        "[5 rows x 23 columns]"
       ]
      },
-     "execution_count": 90,
+     "execution_count": 107,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1047,7 +1047,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 108,
    "metadata": {},
    "outputs": [
     {
@@ -1310,7 +1310,7 @@
        "[5 rows x 23 columns]"
       ]
      },
-     "execution_count": 91,
+     "execution_count": 108,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1345,7 +1345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 109,
    "metadata": {},
    "outputs": [
     {
@@ -1386,7 +1386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 110,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1398,21 +1398,45 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Now we have a clean dataset and we can save it a nd start with the analysis."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 111,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# saving data to csv file\n",
+    "data.to_csv('../DATASET/shot_logs_cleaned.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- GRAPHICAL DATA VISUALIZATION"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "We are going to analyze the shot distance and the shot clock"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 112,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x1aa2f224080>"
+       "<matplotlib.legend.Legend at 0x1aa6ff2bb30>"
       ]
      },
-     "execution_count": 94,
+     "execution_count": 112,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1499,7 +1523,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 113,
    "metadata": {},
    "outputs": [
     {
@@ -1508,7 +1532,7 @@
        "Text(0.5, 1.0, 'Percentage of Shots Made in Overtime')"
       ]
      },
-     "execution_count": 95,
+     "execution_count": 113,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1573,7 +1597,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 114,
    "metadata": {},
    "outputs": [
     {
@@ -1710,7 +1734,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 115,
    "metadata": {},
    "outputs": [
     {
@@ -1881,7 +1905,7 @@
        "4  1.0               0.0                 1.0  "
       ]
      },
-     "execution_count": 97,
+     "execution_count": 115,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1894,7 +1918,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 116,
    "metadata": {},
    "outputs": [
     {
